<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">Bencker</string>
    <string name="speichern">Speichern</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="niwv">Nicht wecken vor</string>
    <string name="niwn">Nicht wecken nach</string>
    <string name="stnwv">Standardwert für die \"Nicht wecken vor\"-Zeit</string>
    <string name="stnwn">Standardwert für die \"Nicht wecken nach\"-Zeit</string>
    <string name="schlummern3">Schlummerzeit</string>
    <string name="stschlummern3">Standardwert für die Schlummerzeit</string>
    <string name="notifications">Benachrichtigungseinstellungen</string>
    <string name="tosettings">Hier kommst du zu deinen Einstellungen, um uns die Erlaubnis zu geben, deine Benachrichtigungen mitzulesen</string>
    <string name="showhint">Hinweis anzeigen</string>
    <string name="hinttext">Der Hinweis erinnert dich immer daran uns die Erlaubnis zu geben/zu überprüfen, deine Benachrichtigungen mitlesen zu dürfen</string>
    <string name="oslibrary">Open-Source Bibliotheken</string>
    <string name="contact">Kontakt</string>
    <string name="terms">Nutzungsbedingungen</string>
    <string name="policy">Datenschutzerklärung</string>
    <string name="about">Über</string>
    <string name="settingstitle">Bencker-Einstellungen</string>
    <string name="timepick">Zeit auswählen</string>
    <string name="settings">Einstellungen</string>
    <string name="confirm_delete">Löschen bestätigen</string>
    <string name="beenden">Beenden</string>
    <string name="schlummern">Schlummern</string>
    <string name="keine_items">Du hast noch keine Alarme eingerichtet. Füge jetzt den ersten hinzu!</string>
    <string name="alarm_name">Name des Alarms</string>
    <string name="message">Nachricht</string>
    <string name="absender">Absender</string>
    <string name="gruppe">Gruppe</string>
    <string name="app">App</string>
    <string name="ringtone">Klingelton</string>
    <string name="volume">Lautstärke</string>
    <string name="inrease_volume">Langsam lauter werden (in Sekunden)</string>
    <string name="schlummern2">Schlummerzeit (Minuten:Sekunden)</string>
    <string name="delete_question">Bist du dir sicher, dass du diesen Bencker löschen möchtest?</string>
    <string name="delete">Löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="read_notifications">Denke daran, dass wir deine Benachrichtigungen mitlesen dürfen müssen!</string>
    <string name="verstanden">Verstanden</string>
    <string name="new_alarm">Neuer Bencker</string>
    <string name="search_ringtone">Suche deinen Klingelton</string>
    <string name="permission_denied">Du kannst keinen Klingelton einstellen, wenn wir nicht die Berechtigung haben, ihn laden zu können, um ihn abzuspielen</string>
    <string name="leave">Verlassen</string>
    <string name="delete_alarm">Bencker löschen</string>
    <string name="go_back_new">Wenn du jetzt zurückgehst, gehen alle bisher eingegebenen Werte verloren.</string>
    <string name="hint_schlummertime">Die Zeitangabe muss ein Doppelpunkt beinhalten oder leer sein</string>
    <string name="onetime">Einmalig</string>
    <string name="name_alarm">Bitte benenne deinen Bencker!</string>
    <string name="parameter_hint">Bitte gib mindestens einen Parameter ein!</string>
    <string name="activate_parameter">Bitte aktiviere mindestens einen Parameter!</string>
    <string name="edit_alarm">Bencker bearbeiten</string>
    <string name="delete_changes">Änderungen löschen</string>
    <string name="delete_values">Wenn du jetzt zurückgehst, gehen alle geänderten Werte verloren.</string>
    <string-array name="spinnerItems">
        <item>Dauerhaft</item>
        <item>Einmalig</item>
    </string-array>
    <string name="always">Dauerhaft</string>
    <string name="vibration">Vibration (in Sekunden)</string>
    <string name="schlummertime_warning">Bitte gib einen Minutenwert und einen Sekundenwert durch Doppelpunkt (:) getrennt ein!</string>
    <string name="activate_right_one">Bitte aktiviere einen nicht leeren Parameter!</string>
    <string name="case_sensitive">Groß-/Kleinschreibung beachten</string>
    <string name="case_text">Überprüft ob bestimmte Wörter (im Nachrichtentext) wirklich groß beziehungsweise klein geschrieben wurden, sonst wird der Bencker nicht ausgelöst. (gilt auch für die Prioritäten)</string>
    <string name="app_settings">App-Einstellungen</string>
    <string name="ringtonedes">Standard Klingelton für die Bencker</string>
    <string name="statusnotification">Bencker-Benachrichtigungen</string>
    <string name="statusbartext">Stelle hier ein, ob du eine dauerhafte Benachrichtigung erhalten möchtest, solange Bencker aktiv sind</string>
    <string name="sleepnotif">Stelle hier ein, ob du eine Benachrichtigung bekommen willst, wenn ein Bencker schlummert</string>
    <string name="sleepnotificatiom">Schlummer-Benachrichtigungen</string>
    <string name="whitelogo">Weißes Logo</string>
    <string name="whitelogotext">Stelle hier ein, ob du lieber ein weißes Logo in der Benachrichtigungsleiste haben möchtest (anstatt dem Bunten)</string>
    <string name="yes">Ja</string>
    <string name="sleepyalarmclocks">Schlummernde Bencker</string>
    <string name="nosnoozing">Aktuell schlummern keine Bencker</string>
    <string name="sensesleeptime">Bitte gib eine sinnvolle (positive) Schlummerzeit ein!</string>
    <string name="finish">Beenden</string>
    <string name="sleepalarmsde">Alle schlummernden Bencker ausschalten?</string>
    <string name="snoozingalarms">Schlummernde Bencker</string>
    <string name="exitsleepxml">Nach Wartezeit automatisch schlummern (aktiv) oder beenden (deaktiv)</string>
    <string name="waitingtimexml">Wartezeit nach der sich der Bencker selbst abschaltet oder schlummert</string>
    <string name="activated">Aktiviert</string>
    <string name="importance">Prioritäten</string>
    <string name="importancetext">Verwalte und bearbeite deine Prioritäten oder füge neue hinzu</string>
    <string name="importancelevel">Wecken ab Prioritätstufe:</string>
    <string name="nopriorities">Du hast noch keine Prioritäten angelegt.</string>
    <string name="nowords">Du hast noch keine Wörter hinzugefügt.</string>
    <string name="importanceadapter">Priorität</string>
    <string name="nopriowords">Du hast noch keine Begriffe für diese Priorität festgelegt.</string>
    <string name="addnewwords">Neue(s) Auslöserwort(/-wörter) hizufügen</string>
    <string name="editwords">Wort/Wörter bearbeiten</string>
    <string name="sc1">Schlummernde beenden</string>
    <string name="sc12">Alle schlummernde Bencker beenden</string>
    <string name="sc2">Aktive beenden</string>
    <string name="sc22">Alle aktiven Bencker beenden</string>
    <string name="scd">Deaktiviert</string>
    <string name="notover60">Bitte gib keine Sekundenzahl ein, die 60 übersteigt!</string>
    <string name="allsleepingalarms">Alle schlummernden Bencker wurden ausgeschaltet.</string>
    <string name="allactivealarms">Alle aktiven Bencker wurden ausgeschaltet.</string>
    <string name="importanceinfo">Gib entweder ein einzelnes Wort ein oder eine Wortgruppe (Wörter mit Semikolons getrennt). Die App prüft, ob eine Nachricht irgendein(e) Wort/Wortgruppe der eingespeicherten oder einer höheren Prioritätsstufe beinhaltet und aktiviert den Alarm, wenn das der Fall ist, sonst nicht.</string>
    <string name="insertsomething">Bitte gib etwas ein!</string>
    <string name="deleteallimportances">Bist du dir sicher, dass du alle Prioritäten löschen willst?</string>
    <string name="deleteallimportancewords">Bist du dir sicher, dass du alle Wörter/Wortgruppen dieser Priorität löschen willst?</string>
    <string name="minuten">Minuten</string>
    <string name="finishall">Alle Beenden</string>
    <string name="copy" tools:ignore="PrivateResource">Kopieren</string>
    <string name="navigation_drawer_open">Navigationsmenü öffnen</string>
    <string name="navigation_drawer_close">Navigationsmenü schließen</string>
    <string name="agreement"><![CDATA[Mit der Nutzung dieser App aktzeptiere ich die <a href=\"https://www.kruemelopment-dev.de/datenschutzerklaerung\">Datenschutzerklärung</a> und die <a href=\"https://www.kruemelopment-dev.de/nutzungsbedingungen\">Nutzungsbedingungen</a> von Krümelopment Dev]]></string>
    <string name="draw_over_other_apps">Über anderen Apps einblenden</string>
    <string name="draw_over_apps_text">Hier kommst du zu den Einstellungen, um uns die Erlaubnis zu geben den Wecker über anderen Apps einblenden zu lassen.</string>
</resources>
