<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="?attr/colorBackgroundFloating"
    android:padding="5dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editText34"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAlwaysShown="true"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelText="@string/addnewwords"
        app:met_textColor="?android:attr/textColorPrimary"
        app:met_floatingLabelTextColor="@color/colorPrimaryDark" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editText34"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/info" />

    <com.rey.material.widget.TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/imageView5"
        android:layout_marginEnd="5dp"
        android:padding="5dp"
        android:text="@string/speichern"
        app:rd_enable="true"
        app:rd_style="@style/Material.Drawable.Ripple.Touch"
        android:textColor="@color/colorPrimary" />

    <com.rey.material.widget.TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView17"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/textView17"
        android:padding="5dp"
        android:text="@string/cancel"
        app:rd_enable="true"
        app:rd_style="@style/Material.Drawable.Ripple.Touch"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>